k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotions
  labels:
    app: promotions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotions
  template:
    metadata:
      labels:
        app: promotions
    spec:
      containers:
        - name: promotions
          image: cluster-registry:5000/promotions:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
