k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promotions-service
  labels:
    app: promotions
spec:
  selector:
    app: promotions
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
